--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,15 @@
 [package]
 name = "partial-commander"
+description = "A simple console based directory tree navigator"
 version = "0.1.0"
 authors = ["akosnad"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "pc"
+path = "src/main.rs"
 
 [dependencies]
+crossterm = "0.19"
+tui = { version = "0.14", default-features = false, features = ['crossterm']}
+argh = "0.1"
