--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   build:
 
-    runs-on: windows
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -28,7 +28,8 @@ jobs:
         if-no-files-found: error
 
   release:
-    runs-on: windows
+    needs: build
+    runs-on: windows-latest
     steps:
     - name: Download Build Artifact
       uses: actions/download-artifact@v2.0.8
