--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -17,10 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build --release --verbose
+      run: cargo build --release
 
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v2.2.2
       with:
@@ -29,7 +29,7 @@ jobs:
 
   release:
     needs: build
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - name: Download Build Artifact
       uses: actions/download-artifact@v2.0.8
