--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -35,6 +35,7 @@ jobs:
     steps:
     - name: Download Build Artifact
       uses: actions/download-artifact@v2.0.8
+      id: download
     - name: Publish executable
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
@@ -43,4 +44,4 @@ jobs:
         prerelease: true
         title: "Development build"
         files: |
-          pc.exe
+          ${{steps.download.outputs.download-path}}/*.exe
