--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ path = "src/main.rs"
 crossterm = "0.19"
 tui = { version = "0.14", default-features = false, features = ['crossterm']}
 argh = "0.1"
+
+[target.'cfg(windows)'.dependencies]
+winapi = {version = "0.3", features = ["winuser"]}
