--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ path = "src/main.rs"
 crossterm = "0.19"
 tui = { version = "0.14", default-features = false, features = ['crossterm']}
 argh = "0.1"
+content_inspector = "0.2"
+itertools = "0.10"
 
 [target.'cfg(windows)'.dependencies]
 winapi = {version = "0.3", features = ["winuser"]}
