--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
             "request": "launch",
             "program": "${workspaceFolder}/target/debug/pc",
             "args": [],
-            "cwd": "${workspaceFolder}"
+            "cwd": "${workspaceFolder}",
+            "preLaunchTask": "build"
         },
         {
             "name": "(Windows) Launch",
@@ -18,7 +19,8 @@
             "request": "launch",
             "program": "${workspaceFolder}\\target\\debug\\pc.exe",
             "args": [],
-            "cwd": "${workspaceFolder}"
+            "cwd": "${workspaceFolder}",
+            "preLaunchTask": "build"
         }
     ]
 }
